--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run ShellCheck
-        run: shellcheck bin/*
+        run: shellcheck -x bin/*
 
   format:
     runs-on: macos-latest
