--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint & Format
+name: Lint
 on:
   pull_request:
     paths-ignore:
@@ -24,4 +24,4 @@ jobs:
       - name: Install shfmt
         run: brew install shfmt
       - name: Run shfmt
-        run: shfmt -d .
+        run: shfmt -d -i 2 -ci .
